Fix: Fixed some UI issues on Mobile screen

--- a/frontend/src/pages/Auth/Auth.module.css
+++ b/frontend/src/pages/Auth/Auth.module.css
@@ -117,6 +117,10 @@
     width: 100%;
   }
 
+  .formCnt input{
+    width: 90%;
+  }
+
   .right {
     display: none;
   }
