--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -199,7 +199,7 @@
 
   .rightCnt .scrollableCnt {
     width: 100%;
-    height: 87%;
+    height: 80%;
   }
 
   .rightCnt .receivedChats {
